# simple-ai

./: .gitignore  Cargo.toml  PLAN.md  README.md  test_multilingual_embeddings.py
.github/workflows/: tests.yml
android/: README.md  icon-preview.html  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/aidl/com/lelloman/simpleai/: ISimpleAI.aidl
android/app/src/main/java/com/lelloman/simpleai/: MainActivity.kt
android/app/src/main/java/com/lelloman/simpleai/api/: ApiResponse.kt  ProtocolHandler.kt
android/app/src/main/java/com/lelloman/simpleai/capability/: CapabilityId.kt  CapabilityManager.kt
android/app/src/main/res/drawable/: ic_launcher_monochrome.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-v31/: themes.xml
android/gradle/: libs.versions.toml
app/: build.gradle.kts
app/src/androidTest/java/com/lelloman/simpleai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/lelloman/simpleai/: ILLMService.aidl  ISimpleAI.aidl
app/src/main/java/com/lelloman/simpleai/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/lelloman/simpleai/api/: ErrorCode.kt
app/src/main/java/com/lelloman/simpleai/capability/: Capability.kt  CapabilityManager.kt  CapabilityStatus.kt
app/src/main/java/com/lelloman/simpleai/chat/: ChatFormatter.kt  ChatModels.kt  HermesFormatter.kt  LlamaFormatter.kt  RawFormatter.kt
app/src/main/java/com/lelloman/simpleai/download/: ModelDownloadManager.kt
app/src/main/java/com/lelloman/simpleai/llm/: ExecuTorchEngine.kt  LLMEngine.kt  LlamaHelperWrapper.kt
app/src/main/java/com/lelloman/simpleai/model/: AvailableModels.kt
app/src/main/java/com/lelloman/simpleai/nlu/: LoraPatcher.kt  OnnxNLUEngine.kt
app/src/main/java/com/lelloman/simpleai/service/: LLMService.kt  SimpleAIService.kt
app/src/main/java/com/lelloman/simpleai/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/lelloman/simpleai/translation/: TranslationManager.kt
app/src/main/java/com/lelloman/simpleai/ui/: CapabilitiesScreen.kt  CapabilitiesViewModel.kt  CapabilityCard.kt  TranslationLanguagesScreen.kt
app/src/main/java/com/lelloman/simpleai/util/: Logger.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/lelloman/simpleai/: ExampleUnitTest.kt  MainViewModelTest.kt
app/src/test/java/com/lelloman/simpleai/capability/: CapabilityManagerTest.kt  CapabilityStatusTest.kt
app/src/test/java/com/lelloman/simpleai/download/: ModelDownloadManagerTest.kt
app/src/test/java/com/lelloman/simpleai/llm/: LlamaEngineTest.kt  StubLLMEngineTest.kt
app/src/test/java/com/lelloman/simpleai/translation/: LanguageTest.kt
backend/: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  config.example.toml
backend/scripts/: simple_ai_extract.py
backend/src/: arp.rs  circuit_breaker.rs  config.rs  lib.rs  logging.rs  main.rs  rate_limit.rs  wol.rs
backend/src/audit/: mod.rs  sqlite.rs
backend/src/auth/: jwks.rs  mod.rs
backend/src/gateway/: batch_dispatcher.rs  batch_queue.rs  mod.rs  model_class.rs  registry.rs  router.rs  scheduler.rs  telemetry.rs  ws.rs
backend/src/llm/: mod.rs  ollama.rs
backend/src/models/: audit.rs  chat.rs  mod.rs  request.rs  user.rs
backend/src/routes/: admin.rs  audio_embeddings.rs  auth_helpers.rs  chat.rs  embeddings.rs  extract.rs  health.rs  language.rs  mod.rs  models.rs  ocr.rs  responses.rs  speech.rs
backend/src/test_util/: mock_ollama.rs  mod.rs
backend/static/: admin.html
backend/templates/: admin_base.html
backend/templates/admin/: dashboard.html  requests.html  users.html
backend/tests/: responses_api_test.rs  smoke_test.rs
docs/: omr-system-review-workflow.md
docs/plans/: gateway-batch-queue.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
inference-runner/: Cargo.toml  PHASE4.md  build.rs  config.example.toml
inference-runner/scripts/: paddle_ocr.py
inference-runner/src/: config.rs  error.rs  main.rs  ocr.rs  state.rs
inference-runner/src/api/: audio_embeddings.rs  chat.rs  embeddings.rs  health.rs  mod.rs  models.rs  ocr.rs  speech.rs
inference-runner/src/capability/: mod.rs
inference-runner/src/engine/: audio_embeddings.rs  llama_cpp.rs  mod.rs  ollama.rs  registry.rs  tts.rs
inference-runner/src/gateway/: client.rs  mod.rs  status.rs
inference-runner/tests/: api_test.rs
scripts/: deploy-fleet.sh  deploy-hosts.example.toml  deploy-runner.sh  deploy-server.sh  evaluate_omr_layout.py  evaluate_staff_lines.py  evaluate_system_regions.py  generate-tts-sample.sh  omr-layout-requirements.txt  omr_create_review_campaign.py  omr_download_layout_dataset.py  omr_export_reviewed_yolo.py  omr_layout_gui.py  omr_predict_staff_system_yolo.py  omr_prepare_review_book.py  omr_prepare_staff_system_dataset.py  omr_review_system_boxes.py  omr_train_staff_system_yolo.py  simple-ai-runner.service  simple_ai_audio_provider.py  simple_ai_chatterbox_provider.py  simple_ai_xtts_provider.py
simple-ai-common/: Cargo.toml
simple-ai-common/src/: audio_embeddings.rs  capability.rs  chat.rs  lib.rs  ocr.rs  protocol.rs  responses.rs  speech.rs
tests/: README.md  common.py  requirements.txt  test_auth.py  test_model_routing.py  test_omr_create_review_campaign.py  test_omr_export_reviewed_yolo.py  test_omr_grand_staff_regions.py  test_speculative_wake_priority.py  test_wol.py  test_workload_routing.py
tests/e2e/: Dockerfile.test-runner  backend-config.toml  docker-compose.yml  get-token.sh  run-e2e-tests.sh  run-tests.sh
tests/e2e/fake-runner/: Dockerfile  runner.py
tests/e2e/mock-oidc/: Dockerfile  requirements.txt  server.py
(+21 files in other folders)
