[workspace]
resolver = "2"
members = [
    "backend",
    "simple-ai-common",
    "inference-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lelloman"]

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
config = "0.14"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Internal crates
simple-ai-common = { path = "simple-ai-common" }
