[package]
name = "simple-ai-backend"
description = "SimpleAI API Gateway - OpenAI-compatible proxy for Ollama with OIDC auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
simple-ai-common = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# JWT/OIDC
jsonwebtoken = "9"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Crypto (API keys)
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Language detection
fasttext = "0.7"

# WebSocket (gateway)
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = "0.5"
tower-test = "0.4"
wiremock = "0.6"
mockall = "0.11"
rstest = "0.17"
claim = "0.5"
tempfile = "3.8"
http = "1.0"
bytes = "1"
